package com.zava8.calculator.model;

public class CalculationModel {
}

