@startuml

title __MODEL's Class Diagram__\n

  namespace com.annushkaproject.programmerscalculator {
    namespace model {
      class com.annushkaproject.programmerscalculator.model.CalculationModel {
      }
    }
  }
  

  namespace com.annushkaproject.programmerscalculator {
    namespace model {
      class com.annushkaproject.programmerscalculator.model.HistoryResult {
          - id : String
          - result : String
          - saveDate : Date
          + getId()
          + getResult()
          + getSaveDate()
          + setResult()
      }
    }
  }
  

  namespace com.annushkaproject.programmerscalculator {
    namespace model {
      enum Operator {
        ABS
        ACOS
        ADD
        AND
        ASIN
        ATAN
        CHANGE_SIGN
        COS
        DENOMINATOR
        EXPONENT_POWER
        FACTORIAL
        LN
        LOG
        LSH
        MULTIPLY
        NOT
        OR
        PERCENT
        POWER
        RSH
        SIN
        SQUARE
        SQUARE_ROOT
        SUBTRACT
        TAN
        UNKNOWN
        XOR
        get_remainder
        remainder_divide
      }
    }
  }
  

  namespace com.annushkaproject.programmerscalculator {
    namespace model {
      class com.annushkaproject.programmerscalculator.model.ProgrammerCalcModel {
          - firstValue : BigDecimal
          - nmbr_base : int
          - secondValue : BigDecimal
          + ProgrammerCalcModel()
          + ProgrammerCalcModel()
          + ProgrammerCalcModel()
          + ProgrammerCalcModel()
          + ProgrammerCalcModel()
          + getBytelengthenum()
          + getFirstValue()
          + getOperator()
          + getSecondValue()
          + isFirstIntegerValue()
          + isNotNumber()
          + resetCalcState()
          + setBytelengthenum()
          + setFirstValue()
          + setOperator()
          + setSecondValue()
          + setSecondValueEqualToFirst()
          + textForValue()
          + updateAfterCalculation()
          + updateValues()
      }
    }
  }
  

  namespace com.annushkaproject.programmerscalculator {
    namespace model {
      enum ThemeSetting {
        AUTO
        DARK
        LIGHT
        UNKNOWN
      }
    }
  }
  

  namespace com.annushkaproject.programmerscalculator {
    namespace model {
      enum int_size_enum {
        l1
        l2
        l4
        l8
      }
    }
  }
  

  namespace com.annushkaproject.programmerscalculator {
    namespace model {
      enum kl_lang_setting {
        AUTO
        UNKNOWN
        hindi
        zinglish
      }
    }
  }
  

  com.annushkaproject.programmerscalculator.model.HistoryResult -up-|> io.realm.RealmObject
  com.annushkaproject.programmerscalculator.model.ProgrammerCalcModel o-- com.annushkaproject.programmerscalculator.model.int_size_enum : bytelengthenum
  com.annushkaproject.programmerscalculator.model.ProgrammerCalcModel o-- com.annushkaproject.programmerscalculator.model.Operator : operator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
